--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   </head>
   <body>
-    
+    <button class="btn btn-primary" type="button" name="button">Press for greeting</button>
   </body>
 </html>
